--- a/VIT_Module/6-Python_Arayuz/UI_Files/settings_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/settings_ui.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FormSettings</class>
- <widget class="QWidget" name="FormSettings">
+ <class>DialogSettings</class>
+ <widget class="QDialog" name="DialogSettings">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -20,11 +20,291 @@
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0.489, y1:1, x2:0.494, y2:0, stop:0 rgba(71, 71, 71, 255), stop:1 rgba(255, 255, 255, 255));</string>
   </property>
+  <widget class="QFrame" name="gridFrameChangePassword">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>235</y>
+     <width>250</width>
+     <height>250</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>250</width>
+     <height>250</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>250</height>
+    </size>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0, 255);</string>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_3">
+    <item>
+     <widget class="QLabel" name="labelChangePassword">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <underline>true</underline>
+       </font>
+      </property>
+      <property name="text">
+       <string>Change Password</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="lineEditCurrentPass">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>230</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>230</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit {
+	color: rgb(255, 255, 255);
+  	border: 2px solid rgba(38, 38, 48,20);
+  	border-radius: 15px;
+  	padding-left: 15px;
+  	background-color: rgba(36, 36, 36,0);
+	background-color: rgb(170, 170, 127); 
+}
+
+QLineEdit:hover {
+	border: 2px solid rgb(0, 255, 255);
+}
+
+ QLineEdit:focus  {
+  border: 2px solid rgb(35, 218, 233);
+}
+</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>Current Password</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="lineEditNewPass">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>230</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>230</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit {
+	color: rgb(255, 255, 255);
+  	border: 2px solid rgba(38, 38, 48,20);
+  	border-radius: 15px;
+  	padding-left: 15px;
+  	background-color: rgba(36, 36, 36,0);
+	background-color: rgb(170, 170, 127); 
+}
+
+QLineEdit:hover {
+	border: 2px solid rgb(0, 255, 255);
+}
+
+ QLineEdit:focus  {
+  border: 2px solid rgb(35, 218, 233);
+}
+</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::Normal</enum>
+      </property>
+      <property name="placeholderText">
+       <string>New Password</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="lineEditNewPass2">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>230</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>230</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit {
+	color: rgb(255, 255, 255);
+  	border: 2px solid rgba(38, 38, 48,20);
+  	border-radius: 15px;
+  	padding-left: 15px;
+  	background-color: rgba(36, 36, 36,0);
+	background-color: rgb(170, 170, 127); 
+}
+
+QLineEdit:hover {
+	border: 2px solid rgb(0, 255, 255);
+}
+
+ QLineEdit:focus  {
+  border: 2px solid rgb(35, 218, 233);
+}
+</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::Normal</enum>
+      </property>
+      <property name="placeholderText">
+       <string>New Password (Again)</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QFrame" name="gridFrameCPApproveCancel">
+      <property name="minimumSize">
+       <size>
+        <width>250</width>
+        <height>45</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>250</width>
+        <height>45</height>
+       </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(0, 0, 0, 255);</string>
+      </property>
+      <layout class="QFormLayout" name="formLayout">
+       <item row="1" column="0">
+        <widget class="QPushButton" name="pushButtonCPApprove">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>100</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="mouseTracking">
+          <bool>true</bool>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::StrongFocus</enum>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">
+QPushButton{
+	border-radius : 15px;
+	background-color : rgb(25, 200, 200);
+	color: rgb(255, 255, 255);
+ 
+}
+QPushButton:hover{
+	background-color: rgb(20, 135, 135);
+    border: 2px solid rgb(162, 0, 0);
+	
+}
+
+</string>
+         </property>
+         <property name="text">
+          <string>APPROVE</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QPushButton" name="pushButtonCPCancel">
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>100</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+	border-radius : 15px;
+	background-color : rgb(25, 200, 200);
+	color: rgb(255, 255, 255);
+}
+QPushButton:hover{
+	background-color: rgb(20, 135, 135);
+    border: 2px solid rgb(162, 0, 0);
+}
+</string>
+         </property>
+         <property name="text">
+          <string>CANCEL</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <widget class="QLabel" name="labelPicture">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>13</y>
+     <x>5</x>
+     <y>10</y>
      <width>250</width>
      <height>170</height>
     </rect>
@@ -54,50 +334,11 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="labelManageAccount">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>193</y>
-     <width>236</width>
-     <height>35</height>
-    </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>0</width>
-     <height>35</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>250</width>
-     <height>35</height>
-    </size>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>22</pointsize>
-     <bold>true</bold>
-     <underline>true</underline>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 0, 0, 255);
-color: black</string>
-   </property>
-   <property name="text">
-    <string>Manage Account</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
   <widget class="QFrame" name="gridFrameUserInfo">
    <property name="geometry">
     <rect>
      <x>5</x>
-     <y>238</y>
+     <y>235</y>
      <width>250</width>
      <height>250</height>
     </rect>
@@ -401,291 +642,11 @@ QPushButton:hover{
     </item>
    </layout>
   </widget>
-  <widget class="QFrame" name="gridFrameChangePassword">
-   <property name="geometry">
-    <rect>
-     <x>5</x>
-     <y>238</y>
-     <width>250</width>
-     <height>250</height>
-    </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>250</width>
-     <height>250</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>250</width>
-     <height>250</height>
-    </size>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 0, 0, 255);</string>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout_3">
-    <item>
-     <widget class="QLabel" name="labelChangePassword">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-        <underline>true</underline>
-       </font>
-      </property>
-      <property name="text">
-       <string>Change Password</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="lineEditCurrentPass">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>230</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>230</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="focusPolicy">
-       <enum>Qt::StrongFocus</enum>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QLineEdit {
-	color: rgb(255, 255, 255);
-  	border: 2px solid rgba(38, 38, 48,20);
-  	border-radius: 15px;
-  	padding-left: 15px;
-  	background-color: rgba(36, 36, 36,0);
-	background-color: rgb(170, 170, 127); 
-}
-
-QLineEdit:hover {
-	border: 2px solid rgb(0, 255, 255);
-}
-
- QLineEdit:focus  {
-  border: 2px solid rgb(35, 218, 233);
-}
-</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="placeholderText">
-       <string>Current Password</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="lineEditNewPass">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>230</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>230</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QLineEdit {
-	color: rgb(255, 255, 255);
-  	border: 2px solid rgba(38, 38, 48,20);
-  	border-radius: 15px;
-  	padding-left: 15px;
-  	background-color: rgba(36, 36, 36,0);
-	background-color: rgb(170, 170, 127); 
-}
-
-QLineEdit:hover {
-	border: 2px solid rgb(0, 255, 255);
-}
-
- QLineEdit:focus  {
-  border: 2px solid rgb(35, 218, 233);
-}
-</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="echoMode">
-       <enum>QLineEdit::Normal</enum>
-      </property>
-      <property name="placeholderText">
-       <string>New Password</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="lineEditNewPass2">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>230</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>230</width>
-        <height>30</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QLineEdit {
-	color: rgb(255, 255, 255);
-  	border: 2px solid rgba(38, 38, 48,20);
-  	border-radius: 15px;
-  	padding-left: 15px;
-  	background-color: rgba(36, 36, 36,0);
-	background-color: rgb(170, 170, 127); 
-}
-
-QLineEdit:hover {
-	border: 2px solid rgb(0, 255, 255);
-}
-
- QLineEdit:focus  {
-  border: 2px solid rgb(35, 218, 233);
-}
-</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="echoMode">
-       <enum>QLineEdit::Normal</enum>
-      </property>
-      <property name="placeholderText">
-       <string>New Password (Again)</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QFrame" name="gridFrameCPApproveCancel">
-      <property name="minimumSize">
-       <size>
-        <width>250</width>
-        <height>45</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>250</width>
-        <height>45</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(0, 0, 0, 255);</string>
-      </property>
-      <layout class="QFormLayout" name="formLayout">
-       <item row="1" column="0">
-        <widget class="QPushButton" name="pushButtonCPApprove">
-         <property name="minimumSize">
-          <size>
-           <width>100</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>100</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="mouseTracking">
-          <bool>true</bool>
-         </property>
-         <property name="focusPolicy">
-          <enum>Qt::StrongFocus</enum>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">
-QPushButton{
-	border-radius : 15px;
-	background-color : rgb(25, 200, 200);
-	color: rgb(255, 255, 255);
- 
-}
-QPushButton:hover{
-	background-color: rgb(20, 135, 135);
-    border: 2px solid rgb(162, 0, 0);
-	
-}
-
-</string>
-         </property>
-         <property name="text">
-          <string>APPROVE</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QPushButton" name="pushButtonCPCancel">
-         <property name="minimumSize">
-          <size>
-           <width>100</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>100</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">QPushButton{
-	border-radius : 15px;
-	background-color : rgb(25, 200, 200);
-	color: rgb(255, 255, 255);
-}
-QPushButton:hover{
-	background-color: rgb(20, 135, 135);
-    border: 2px solid rgb(162, 0, 0);
-}
-</string>
-         </property>
-         <property name="text">
-          <string>CANCEL</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
-   </layout>
-  </widget>
   <widget class="QFrame" name="frameOptions">
    <property name="geometry">
     <rect>
      <x>5</x>
-     <y>238</y>
+     <y>235</y>
      <width>250</width>
      <height>250</height>
     </rect>
@@ -904,11 +865,45 @@ QPushButton:hover{
     </property>
    </widget>
   </widget>
-  <zorder>gridFrameUserInfo</zorder>
-  <zorder>gridFrameChangePassword</zorder>
-  <zorder>labelPicture</zorder>
-  <zorder>labelManageAccount</zorder>
-  <zorder>frameOptions</zorder>
+  <widget class="QLabel" name="labelManageAccount">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>190</y>
+     <width>236</width>
+     <height>35</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>35</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>35</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>22</pointsize>
+     <bold>true</bold>
+     <underline>true</underline>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0, 255);
+color: black</string>
+   </property>
+   <property name="text">
+    <string>Manage Account</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
